cmake_minimum_required(VERSION 2.8.10)

project(OrthancStone)

include(${CMAKE_SOURCE_DIR}/../../../OrthancStone/Resources/CMake/OrthancStoneParameters.cmake)

if (ORTHANC_FRAMEWORK_SOURCE STREQUAL "system")
  set(ORTHANC_BOOST_COMPONENTS program_options)

  set(USE_SYSTEM_GOOGLE_TEST ON CACHE BOOL "Use the system version of Google Test")
  set(USE_GOOGLE_TEST_DEBIAN_PACKAGE OFF CACHE BOOL "Use the sources of Google Test shipped with libgtest-dev (Debian only)")
  mark_as_advanced(USE_GOOGLE_TEST_DEBIAN_PACKAGE)
  include(${ORTHANC_STONE_ROOT}/Resources/Orthanc/CMake/DownloadPackage.cmake)
  include(${ORTHANC_STONE_ROOT}/Resources/Orthanc/CMake/GoogleTestConfiguration.cmake)

else()
  set(ENABLE_GOOGLE_TEST ON)
  set(ENABLE_LOCALE ON)  # Necessary for text rendering
  set(ENABLE_OPENGL ON)  #  <==
  set(ENABLE_WEB_CLIENT ON)
endif()

set(ENABLE_DCMTK ON)  # <==
set(ENABLE_SDL ON)

include(${ORTHANC_STONE_ROOT}/Resources/CMake/OrthancStoneConfiguration.cmake)
include(${CMAKE_SOURCE_DIR}/Utilities.cmake)

if (NOT ORTHANC_FRAMEWORK_SOURCE STREQUAL "system")
  # This include must be after "OrthancStoneConfiguration.cmake" to
  # have "BOOST_SOURCES_DIR" defined
  include(${CMAKE_SOURCE_DIR}/BoostExtendedConfiguration.cmake)
endif()


DownloadPackage(
  "a24b8136b8f3bb93f166baf97d9328de"
  "http://orthanc.osimis.io/ThirdPartyDownloads/ubuntu-font-family-0.83.zip"
  "${CMAKE_BINARY_DIR}/ubuntu-font-family-0.83")

EmbedResources(
  COLORMAP_HOT ${ORTHANC_STONE_ROOT}/Resources/Colormaps/hot.lut
  UBUNTU_FONT  ${CMAKE_BINARY_DIR}/ubuntu-font-family-0.83/Ubuntu-R.ttf
  )

SortFilesInSourceGroups()

add_library(OrthancStone STATIC
  ${ORTHANC_STONE_SOURCES}
  ${AUTOGENERATED_SOURCES}
  ${BOOST_EXTENDED_SOURCES}
  )

message(${AUTOGENERATED_SOURCES})



#############################
project(RtViewerSdl)

add_executable(RtViewerSdl
  RtViewer/RtViewerSdl.cpp
  SdlHelpers.h
  ../Common/RtViewerApp.cpp
  ../Common/RtViewerApp.h
  ../Common/RtViewerView.cpp
  ../Common/RtViewerView.h
  ../Common/SampleHelpers.h
  )

target_link_libraries(RtViewerSdl OrthancStone ${DCMTK_LIBRARIES})

#############################
project(SdlSimpleViewer)

add_executable(SdlSimpleViewer
  SdlHelpers.h
  ../Common/SampleHelpers.h
  SingleFrameViewer/SdlSimpleViewerApplication.h
  SingleFrameViewer/SdlSimpleViewer.cpp
  )

target_link_libraries(SdlSimpleViewer OrthancStone ${DCMTK_LIBRARIES})

#############################
project(UnitTests)

add_executable(UnitTests
  ${GOOGLE_TEST_SOURCES}
  ${ORTHANC_STONE_ROOT}/UnitTestsSources/GenericToolboxTests.cpp
  ${ORTHANC_STONE_ROOT}/UnitTestsSources/ImageToolboxTests.cpp
  ${ORTHANC_STONE_ROOT}/UnitTestsSources/PixelTestPatternsTests.cpp
  ${ORTHANC_STONE_ROOT}/UnitTestsSources/TestMessageBroker.cpp
  ${ORTHANC_STONE_ROOT}/UnitTestsSources/TestStrategy.cpp
  ${ORTHANC_STONE_ROOT}/UnitTestsSources/TestStructureSet.cpp
  ${ORTHANC_STONE_ROOT}/UnitTestsSources/SortedFramesTests.cpp
  ${ORTHANC_STONE_ROOT}/UnitTestsSources/UnitTestsMain.cpp
  )

target_link_libraries(UnitTests OrthancStone)

add_custom_command(
  TARGET UnitTests
  POST_BUILD
  COMMAND ${CMAKE_COMMAND} -E copy
    "${ORTHANC_STONE_ROOT}/UnitTestsSources/72c773ac-5059f2c4-2e6a9120-4fd4bca1-45701661.json" 
    "$<TARGET_FILE_DIR:UnitTests>/72c773ac-5059f2c4-2e6a9120-4fd4bca1-45701661.json"
)

target_link_libraries(UnitTests OrthancStone ${DCMTK_LIBRARIES})
